--- a/src/Makefile
+++ b/src/Makefile
@@ -4,10 +4,10 @@ ifdef JAVASCRIPT
 TARGET := farts.html
 endif
 
-SRCS  := farts.cpp RtAudio.cpp tonic_lua.cpp RtMidi.cpp PolySynth.cpp
-CXXFLAGS += -I../third/kaguya/include -I../third/lua-5.3.5/src -I../third/Tonic/src -D__LINUX_ALSA__
-LIBS += -ltonic -llua -ldl -lasound
-LDFLAGS += -L../third/lua-5.3.5/src -L../third/Tonic/src
+SRCS  := farts.cpp tonic_lua.cpp PolySynth.cpp
+CXXFLAGS += -I../third/kaguya/include -I../third/lua-5.3.5/src -I../third/Tonic/src -I../third/RtMidi -I../third/RtAudio
+LIBS += -ltonic -llua -ldl -lasound -lrtmidi -lrtaudio -lpulse-simple -lpulse
+LDFLAGS += -L../third/lua-5.3.5/src -L../third/Tonic/src -L../third/RtMidi -L../third/RtAudio
 
 #precompiled headers
 HEADERS := tonic_lua.hpp 
