--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,11 @@ third/*/*/*/*.a
 third/*/*/*/*.so
 third/lua-5.3.5/src/lua
 third/lua-5.3.5/src/luac
+src/*.o
+src/*.gch
+src/*.dep
 .cproject
 .project
 .settings/
+src/farts
 
