select alsa as default backend

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ TARGET := farts.html
 endif
 
 SRCS  := farts.cpp tonic_lua0.cpp tonic_lua1.cpp tonic_lua2.cpp PolySynth.cpp ../third/RtMidi/RtMidi.cpp ../third/RtAudio/RtAudio.cpp
-CXXFLAGS += -I../third/kaguya/include -I../third/lua-5.3.5/src -I../third/Tonic/src -I../third/RtMidi -I../third/RtAudio
+CXXFLAGS += -I../third/kaguya/include -I../third/lua-5.3.5/src -I../third/Tonic/src -I../third/RtMidi -I../third/RtAudio -D__LINUX_ALSA__
 LIBS += -ltonic -llua -ldl -lasound -lboost_program_options
 LDFLAGS += -L../third/lua-5.3.5/src -L../third/Tonic/src
 
