--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,13 @@
+UNAME_S := $(shell uname -s)
+
+ifeq ($(UNAME_S), Darwin)
+ CUSTOM_DEFS = -D__MACOSX_CORE__
+endif
+
+ifeq ($(UNAME_S), Linux)
+ CUSTOM_DEFS = -D__LINUX_ALSA__
+endif
+
 TARGET  := farts
 
 ifdef JAVASCRIPT
@@ -5,8 +15,8 @@ TARGET := farts.html
 endif
 
 SRCS  := farts.cpp tonic_lua0.cpp tonic_lua1.cpp tonic_lua2.cpp PolySynth.cpp ../third/RtMidi/RtMidi.cpp ../third/RtAudio/RtAudio.cpp lvplugin.cpp
-CXXFLAGS += -I../third/kaguya/include -I../third/lua-5.3.5/src -I../third/Tonic/src -I../third/RtMidi -I../third/RtAudio -D__LINUX_ALSA__
-LIBS += -ltonic -llua -ldl -lasound -lboost_program_options -llilv-0
+CXXFLAGS += -I../third/kaguya/include -I../third/lua-5.3.5/src -I../third/Tonic/src -I../third/RtMidi -I../third/RtAudio ${CUSTOM_DEFS}
+LIBS += -ltonic -llua -ldl -lboost_program_options -llilv-0
 LDFLAGS += -L../third/lua-5.3.5/src -L../third/Tonic/src
 
 #precompiled headers
