--- a/src/Makefile
+++ b/src/Makefile
@@ -19,8 +19,8 @@ SRCS  := farts.cpp tonic_lua0.cpp tonic_lua1.cpp tonic_lua2.cpp PolySynth.cpp ..
 CXXFLAGS += -I/usr/lib64/ -I../third/uSockets-0.3.2/src/ -I../third/uWebSockets-0.16.1/src -I../third/kaguya/include -I../third/lua-5.3.5/src -I../third/Tonic/src -I../third/cxxopts-2.2.0/include -I../third/nlohmann-json-3.7.0/ -I../third/RtMidi -I../third/RtAudio ${CUSTOM_DEFS}
 LIBS += -ltonic -llua -ldl -llilv-0 -luSockets -lz
 LDFLAGS += -L../third/lua-5.3.5/src -L../third/Tonic/src -L../third/uSockets-0.3.2/
-ASSET_DIRS = $(shell find ../html/ -type d)
-ASSET_FILES = $(shell find ../html/ -type f -name '*')
+ASSET_DIRS = $(shell find ../html/ -type d -not -name ".." -not -name "html")
+ASSET_FILES = $(shell find ../html/ -type f -not -name index.o -not -name index.min.pack -not -name index.html)
 
 #precompiled headers
 HEADERS := tonic_lua.hpp 
