macos: use nasm to build index.o resource

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,14 +1,14 @@
 UNAME_S := $(shell uname -s)
 
 ifeq ($(UNAME_S), Darwin)
- CUSTOM_DEFS = -D__MACOSX_CORE__
- LDFLAGS_EXTRA = -arch x86_64
+ CUSTOM_DEFS = -D__MACOSX_CORE__ -Wno-register
+ PACK_CMD=nasm -fmacho64 index.s -o index.o
 endif
 
 ifeq ($(UNAME_S), Linux)
  CUSTOM_DEFS = -D__LINUX_ALSA__
  LIBS+= -lasound
- LDFLAGS_EXTRA = -b binary
+ PACK_CMD=ld -r -o index.o index.min.pack -b binary
 endif
 
 TARGET  := midipatch
@@ -45,7 +45,7 @@ ${TARGET}: ../html/index.o ${OBJS}
 	${CXX} ${LDFLAGS} -o $@ $^ ${LIBS} 
 
 ../html/index.o: ../html/index.min.pack
-	cd ../html; ld -r -o index.o index.min.pack ${LDFLAGS_EXTRA}
+	cd ../html; ${PACK_CMD}
 
 ../html/index.min.pack: $(ASSET_DIRS) $(ASSET_FILES)
 	cd ../html; inliner -m index.html > index.min.pack
