--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -9,6 +9,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
+    with:
+        submodules: true
     - name: prepare
       run: sudo ./prep_ubuntu.sh
     - name: make
