--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -11,7 +11,9 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: true
-    - name: prepare
+    - name: Prepare Ubuntu
       run: sudo ./prep_ubuntu.sh
-    - name: make
+    - name: Build third party
+      run: ./build_third.sh
+    - name: Build MidiPatch
       run: make
