--- a/packaging/macosx/Info.plist
+++ b/packaging/macosx/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
     <key>CFBundleExecutable</key>
-    <string>MidiPatch</string>
+    <string>wrapper.sh</string>
     <key>CFBundleIdentifier</key>
     <string>com.kallaballa.MidiPatch</string>
     <key>CFBundleInfoDictionaryVersion</key>
