changes necessary for debian packages

--- a/src/Makefile
+++ b/src/Makefile
@@ -36,7 +36,7 @@ endif
 
 SRCS  := midipatch.cpp Websocket.cpp logger.cpp
 CXXFLAGS += -I/usr/lib64/ -I../third/uSockets-0.3.2/src/ -I../third/uWebSockets-0.16.1/src -I../PatchScript/src/ -I../PatchScript/third/SQLiteCPP -I../PatchScript/third/kaguya/include -I../PatchScript/third/lua-5.3.5/src -I../PatchScript/third/Tonic/src -I../third/cxxopts-2.2.0/include -I../third/nlohmann-json-3.7.0/ -I../third/miby -I../third/RtMidi -I../third/RtAudio -I../third/ ${CUSTOM_DEFS}
-LIBS += -ltonic -llua -ldl -llilv-0 -luSockets -lsqlite3 -lz -lpatchscript 
+LIBS += -ltonic -llua -ldl -luSockets -lsqlite3 -lz -lpatchscript 
 LDFLAGS += -L../PatchScript/third/lua-5.3.5/src -L../PatchScript/third/Tonic/src -L../third/uSockets-0.3.2/ -L../PatchScript/src/
 ASSET_DIRS = $(shell find ../html/ -type d -not -name ".." -not -name "html")
 ASSET_FILES = $(shell find ../html/ -type f -not -name index.o -not -name index.min.pack)
@@ -91,8 +91,8 @@ ${TARGET}: ../html/index.o ../third/RtMidi/RtMidi.o ../third/RtAudio/RtAudio.o .
 ../html/index.o: ../html/index.min.pack
 	cd ../html; ${PACK_CMD}
 
-../html/index.min.pack: $(ASSET_DIRS) $(ASSET_FILES)
-	cd ../html; inliner ${INLINEROPTS} index.html > index.min.pack
+#../html/index.min.pack: $(ASSET_DIRS) $(ASSET_FILES)
+#	cd ../html; inliner ${INLINEROPTS} index.html > index.min.pack
 
 ${OBJS}: %.o: %.cpp %.dep ${GCH}
 	${CXX} ${CXXFLAGS} -o $@ -c $< 
@@ -106,12 +106,21 @@ ${GCH}: %.gch: ${HEADERS}
 install:
 	mkdir -p ${DESTDIR}/${PREFIX}/bin
 	cp ${TARGET} ${DESTDIR}/${PREFIX}/bin
+	mkdir -p ${DESTDIR}/${PREFIX}/lib
+	cp ../PatchScript/src/libpatchscript.so ${DESTDIR}/${PREFIX}/lib
+	cp ../third/uSockets-0.3.2/libuSockets.a ${DESTDIR}/${PREFIX}/lib
+	cp ../PatchScript/third/Tonic/src/libtonic.so ${DESTDIR}/${PREFIX}/lib
+	cp ../PatchScript/third/lua-5.3.5/src/liblua.a ${DESTDIR}/${PREFIX}/lib
 
 uninstall:
 	rm ${DESTDIR}/${PREFIX}/bin/${TARGET}
+	rm ${DESTDIR}/${PREFIX}/lib/libpatchscript.so
+	rm ${DESTDIR}/${PREFIX}/lib/libuSockets.a
+	rm ${DESTDIR}/${PREFIX}/lib/libtonic.so
+	rm ${DESTDIR}/${PREFIX}/lib/liblua.a
 
 clean:
-	rm -f *~ ${DEPS} ${OBJS} ${GCH} ${TARGET} ../html/index.o ../html/index.min.pack ../third/RtMidi/RtMidi.o ../third/RtAudio/RtAudio.o ../third/miby/miby.o
+	rm -f *~ ${DEPS} ${OBJS} ${GCH} ${TARGET} ../html/index.o ../third/RtMidi/RtMidi.o ../third/RtAudio/RtAudio.o ../third/miby/miby.o
 
 distclean: clean
 
